--- a/app/views/scrapers/new.html.haml
+++ b/app/views/scrapers/new.html.haml
@@ -1,23 +1,24 @@
-%h1 New scraper
+.container
+  %h1 New scraper
 
-= semantic_form_for @scraper do |f|
-  = f.inputs do
-    .row
-      .col-sm-6
-        = f.input :original_language, collection: Morph::Language.languages_supported.map{|l| [Morph::Language.human(l), l]}, label: "Language", include_blank: false, hint: "The language you would like to write your scraper in. You can change this later."
-    .row
-      .col-sm-2
-        = f.input :owner, collection: current_user.all_owners.map{|o| [o.nickname, o.id]}, include_blank: false
-      .col-sm-6
-        -# TODO Extract common layout code between this and scraperwiki.html.haml
-        .string.input.optional.stringish.form-group#scraper_name_input{class: ("error has-error" unless @scraper.errors[:name].empty?)}
-          %label.control-label(for="scraper_name") Name
-          .input-group
-            %span.input-group-addon /
-            %input.form-control#scraper_name{maxlength: "255", name:"scraper[name]", placeholder:"city_of_sydney_development_applications", type:"text", value:"#{@scraper.name}", class:("error" unless @scraper.errors[:name].empty?)}
-          - @scraper.errors.full_messages_for(:name).each do |m|
-            .alert.alert-warning= m
-          %span.help-block Name to give the scraper here and on GitHub
+  = semantic_form_for @scraper do |f|
+    = f.inputs do
+      .row
+        .col-sm-6
+          = f.input :original_language, collection: Morph::Language.languages_supported.map{|l| [Morph::Language.human(l), l]}, label: "Language", include_blank: false, hint: "The language you would like to write your scraper in. You can change this later."
+      .row
+        .col-sm-2
+          = f.input :owner, collection: current_user.all_owners.map{|o| [o.nickname, o.id]}, include_blank: false
+        .col-sm-6
+          -# TODO Extract common layout code between this and scraperwiki.html.haml
+          .string.input.optional.stringish.form-group#scraper_name_input{class: ("error has-error" unless @scraper.errors[:name].empty?)}
+            %label.control-label(for="scraper_name") Name
+            .input-group
+              %span.input-group-addon /
+              %input.form-control#scraper_name{maxlength: "255", name:"scraper[name]", placeholder:"city_of_sydney_development_applications", type:"text", value:"#{@scraper.name}", class:("error" unless @scraper.errors[:name].empty?)}
+            - @scraper.errors.full_messages_for(:name).each do |m|
+              .alert.alert-warning= m
+            %span.help-block Name to give the scraper here and on GitHub
 
-  = f.actions do
-    = f.action :submit
+    = f.actions do
+      = f.action :submit
