--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -1,3 +1,4 @@
 - content_for :title, @scraper.full_name
 
-= sync partial: "show_partial", resource: @scraper, refetch: true
+.container
+  = sync partial: "show_partial", resource: @scraper, refetch: true
