--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,5 +1,6 @@
-%h1 All Users
+.container
+  %h1 All Users
 
-= paginate @users
-= render @users
-= paginate @users
+  = paginate @users
+  = render @users
+  = paginate @users
