--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -60,7 +60,7 @@
             %li
               - if user_signed_in?
                 = link_to current_user do
-                  = image_tag current_user.gravatar_url(20), width: 20
+                  = image_tag current_user.gravatar_url(20), size: "20x20", class: "img-circle"
                   = current_user.nickname
               - else
                 = link_to "Sign in with GitHub", user_omniauth_authorize_path(:github)
