Make owner info area green

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -5,3 +5,13 @@
 .button_title_adjust {
   margin-top: 24px;
 }
+
+#owner-info {
+  background-color: #b1d05f;
+  width: 100%;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  h1 {
+    margin-top: 0;
+  }
+}
