--- a/app/views/owners/show.html.haml
+++ b/app/views/owners/show.html.haml
@@ -1,52 +1,53 @@
 - content_for :title, @owner.nickname
+.container#owner-info
+  .container
+    .row
+      .col-md-3
+        - if @owner.user?
+          = image_tag @owner.gravatar_url, class: "img-responsive img-circle"
+        - else
+          = image_tag @owner.gravatar_url, class: "img-responsive img-thumbnail"
+
+      .col-md-7
+        - if @owner.name
+          %h1= @owner.name
+          %h4= @owner.nickname
+        - else
+          %h1= @owner.nickname
+        .row
+          .col-md-6
+            %h4 Contacts
+            %ul.list-unstyled
+              - unless @owner.company.blank?
+                %li= @owner.company
+              - unless @owner.blog.blank?
+                %li= link_to @owner.blog, @owner.blog
+            %p
+              = link_to @owner.github_url, target: "_blank" do
+                %i.icon-github-sign.icon-large
+                = @owner.nickname
+                on GitHub
+          .col-md-6
+            - unless @owner.organizations.empty?
+              %h4 Organizations
+              %p
+                - @owner.organizations.each do |org|
+                  = link_to org do
+                    = image_tag org.gravatar_url(30), size: "30x30", class: "has-tooltip", data: {placement: "bottom", title: org.nickname}
+            - unless @owner.users.empty?
+              %h4 Members
+              %p
+                - @owner.users.each do |user|
+                  = link_to user do
+                    = image_tag user.gravatar_url(30), size: "30x30", class: "has-tooltip img-circle", data: {placement: "bottom", title: user.nickname}
+        - if @owner == current_user
+          %div
+            = button_link_to "Show your key", user_settings_path
+      .col-md-2
+        - if signed_in?
+          .button_title_adjust= render partial: "watch_button", locals: {owner: @owner}
+
 .container
-  .row
-    .col-md-3
-      - if @owner.user?
-        = image_tag @owner.gravatar_url, class: "img-responsive img-circle"
-      - else
-        = image_tag @owner.gravatar_url, class: "img-responsive img-thumbnail"
-
-    .col-md-7
-      - if @owner.name
-        %h1= @owner.name
-        %h4= @owner.nickname
-      - else
-        %h1= @owner.nickname
-      .row
-        .col-md-6
-          %h4 Contacts
-          %ul.list-unstyled
-            - unless @owner.company.blank?
-              %li= @owner.company
-            - unless @owner.blog.blank?
-              %li= link_to @owner.blog, @owner.blog
-          %p
-            = link_to @owner.github_url, target: "_blank" do
-              %i.icon-github-sign.icon-large
-              = @owner.nickname
-              on GitHub
-        .col-md-6
-          - unless @owner.organizations.empty?
-            %h4 Organizations
-            %p
-              - @owner.organizations.each do |org|
-                = link_to org do
-                  = image_tag org.gravatar_url(30), size: "30x30", class: "has-tooltip", data: {placement: "bottom", title: org.nickname}
-          - unless @owner.users.empty?
-            %h4 Members
-            %p
-              - @owner.users.each do |user|
-                = link_to user do
-                  = image_tag user.gravatar_url(30), size: "30x30", class: "has-tooltip img-circle", data: {placement: "bottom", title: user.nickname}
-      - if @owner == current_user
-        %div
-          = button_link_to "Show your key", user_settings_path
-    .col-md-2
-      - if signed_in?
-        .button_title_adjust= render partial: "watch_button", locals: {owner: @owner}
-  %hr
-
   - if @scrapers.empty?
     %h3 Has no scrapers
 
