--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -48,7 +48,7 @@
             %li= link_to "Pricing", pricing_path
             %li= link_to "Documentation", documentation_index_path
             - if user_signed_in? && current_user.admin?
-              %li(class="dropdown")
+              %li(class="dropdown hidden-sm")
                 %a(href="#" class="dropdown-toggle" data-toggle="dropdown")
                   Admin
                   %b(class="caret")
