--- a/app/views/documentation/api.html.haml
+++ b/app/views/documentation/api.html.haml
@@ -1,7 +1,7 @@
 - content_for :title, "How to use the API"
 
 %div.alert.alert-info
-  Heads up! On Tuesday, 25 March the API changed. The api key is now given in the URL rather than the headers.
+  Heads up! On Tuesday, March 25th the API changed. The api key is now given in the URL rather than the headers.
   The original authentication method will still work but please change things at your end as soon as possible.
 
 %h1= yield :title
