Make owners page behave a little nicely when you resize down

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -7,11 +7,15 @@
 }
 
 #owner-info {
+  padding: 15px 0;
   background-color: #b1d05f;
   width: 100%;
-  padding-top: 30px;
-  padding-bottom: 30px;
   h1 {
     margin-top: 0;
   }
+}
+
+.owner-box {
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
