--- a/app/views/owners/show.html.haml
+++ b/app/views/owners/show.html.haml
@@ -2,13 +2,13 @@
 .container#owner-info
   .container
     .row
-      .col-md-3
+      .col-md-3.owner-box
         - if @owner.user?
           = image_tag @owner.gravatar_url, class: "img-circle", size: "213x213"
         - else
           = image_tag @owner.gravatar_url, class: "img-thumbnail", size: "213x213"
 
-      .col-md-7
+      .col-md-7.owner-box
         - if @owner.name
           %h1= @owner.name
           %h4= @owner.nickname
@@ -43,7 +43,7 @@
         - if @owner == current_user
           %div
             = button_link_to "Show your key", user_settings_path
-      .col-md-2
+      .col-md-2.owner-box
         - if signed_in?
           .pull-right= render partial: "watch_button", locals: {owner: @owner}
 
