--- a/app/views/static/index.html.haml
+++ b/app/views/static/index.html.haml
@@ -9,7 +9,7 @@
       %ul.list-unstyled
         - User.all.order(created_at: :desc).limit(10).each do |user|
           %li
-            = image_tag user.gravatar_url(20), width: 20, class: "img-circle"
+            = owner_image(user, 20)
             = link_to user.nickname, user
             - if user.name
               &mdash;
@@ -18,7 +18,7 @@
       %ul.list-unstyled
         - Organization.all_with_scrapers.each do |org|
           %li
-            = image_tag org.gravatar_url(20), width: 20
+            = owner_image(org, 20)
             = link_to org.nickname, org
             - if org.name
               &mdash;
