A little menu at the top with anchor links

--- a/app/assets/stylesheets/documentation.css.scss
+++ b/app/assets/stylesheets/documentation.css.scss
@@ -5,3 +5,9 @@
 #sidebar {
   margin-top: 20px;
 }
+
+// This is so that anchor links take the page to the correct spot
+.section {
+  padding-top: 80px;
+  margin-top: -50px;
+}
