Show number of watchers on scraper page

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -144,5 +144,11 @@ h1.full_name {
 }
 
 .log_line {
-  white-space: pre;  
+  white-space: pre;
+}
+
+.watch-button {
+  form, .badge {
+    display: inline-block;
+  }
 }
