Give flash messages and the front page jumbotron more room above them

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -31,3 +31,11 @@ footer {
   margin: 50px auto;
   text-align: center;
 }
+
+.alert {
+  margin-top: 20px;
+}
+
+.jumbotron {
+  margin-top: 10px;
+}
