--- a/app/views/scrapers/scraperwiki.html.haml
+++ b/app/views/scrapers/scraperwiki.html.haml
@@ -9,7 +9,7 @@
     %p This is where you can pick a ScraperWiki scraper, optionally choose a name for it on GitHub and fork away!
 
     %p
-      = link_to "Browse and Search", "https://classic.scraperwiki.com/browse/", target: "_blank"
+      = link_to "Browse and Search", "https://classic.scraperwiki.com/browse/scrapers/index.html", target: "_blank"
       for a scraper on ScraperWiki Classic that you want to fork. Then paste the name of the scraper below.
 
   = semantic_form_for @scraper, url: scraperwiki_scrapers_path do |f|
