--- a/app/views/scrapers/scraperwiki.html.haml
+++ b/app/views/scrapers/scraperwiki.html.haml
@@ -1,16 +1,20 @@
 .container
-  - if @name_set
-    %h1 Fork ScraperWiki scraper #{@scraper.scraperwiki_shortname}
+  .row
+    .col-sm-8
+      - if @name_set
+        %h1 Fork ScraperWiki scraper #{@scraper.scraperwiki_shortname}
 
-    %p Choose a name for the scraper on GitHub
-  - else
-    %h1 Fork ScraperWiki scraper
+        %p Choose a name for the scraper on GitHub
+      - else
+        %h1 Fork ScraperWiki scraper
 
-    %p This is where you can pick a ScraperWiki scraper, optionally choose a name for it on GitHub and fork away!
+        %p This is where you can pick a ScraperWiki scraper, optionally choose a name for it on GitHub and fork away!
 
-    %p
-      = link_to "Browse and Search", "https://classic.scraperwiki.com/browse/scrapers/index.html", target: "_blank"
-      for a scraper on ScraperWiki Classic that you want to fork. Then paste the name of the scraper below.
+        %p
+          = link_to "Browse and Search", "https://classic.scraperwiki.com/browse/scrapers/index.html", target: "_blank"
+          for a scraper on ScraperWiki Classic that you want to fork and simply click the <em>Transfer to Morph.io</em> button that the lovely ScraperWiki folks made for us.
+
+        %p Or you can paste the name of the scraper below, it's up to you.
 
   = semantic_form_for @scraper, url: scraperwiki_scrapers_path do |f|
     = f.inputs do
