--- a/app/views/scrapers/_history.html.haml
+++ b/app/views/scrapers/_history.html.haml
@@ -1,5 +1,5 @@
 #history
-  - unless scraper.finished_runs.empty?
+  - unless scraper.finished_runs.length == 0
     %h3 History
 
     -# TODO Only show a limited number of the most recent runs
