Make run button more prominent. Fixes #201

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -93,8 +93,8 @@ span.internal {
   margin-bottom: 4em;
 }
 
-#scraper_run {
-  margin-bottom: 2em
+#scraper_run input {
+  width: 200px;
 }
 
 // Workaround for copy to clipboard
