--- a/app/views/documentation/api.html.haml
+++ b/app/views/documentation/api.html.haml
@@ -32,7 +32,7 @@
       %label.control-label.col-sm-1(for="format") [format]
       .col-sm-3
         %select.form-control#format(name="format")
-          = options_for_select(["json", "csv"])
+          = options_for_select(["json", "csv", "atom"])
         %span.help-block
           Format of outputted data
     .string.input.optional.stringish.form-group#callback_input
