More what's new

--- a/app/views/documentation/what_is_new.html.haml
+++ b/app/views/documentation/what_is_new.html.haml
@@ -1,8 +1,14 @@
 :markdown
   ## What's New
-  Here we show you the changes that you can see. There's also lots of stuff that changes under the
+  Here we show you the changes that you can see. We update this page every few weeks.
+  There's also lots of stuff that changes under the
   hood. If you're interested in seeing those too, look at the
   [full list of commits](https://github.com/openaustralia/morph/commits/master).
+
+  ### April 18
+  * In the API add support for atom feeds. Thank you to [@pezholio](https://github.com/pezholio) for this!
+    It works in a really flexible way where you can make any field of your data map to different
+    bits of the atom feed like the content and the link in each item. [Have a look](#{api_documentation_index_path}).
 
   ### April 17
   * Morph now only needs to ask you for public repository read/write permissions for GitHub.
@@ -41,4 +47,21 @@
   ### April 11
   * Fix problem caused by table names with spaces in SQLite
 
-  ### Mar 31
+  ### Mar 28
+  * On each run it now shows you the number of database records that were added, removed or changed.
+
+  ### Mar 27
+  * Improve error checking on ScraperWiki form page
+
+  ### Mar 26
+  * Small visual design tweaks
+  * Show number of watchers on scraper pages with a link to the full list of watchers
+
+  ### Mar 25
+  * Design fixes
+  * Redesigned user pages
+  * Updated API documentation
+
+  ### And further back
+
+  If you're interested in looking further back then see the [full list of commits](https://github.com/openaustralia/morph/commits/master).
